--- a/.github/workflows/ushasree-ci.yaml
+++ b/.github/workflows/ushasree-ci.yaml
@@ -37,4 +37,4 @@ jobs:
       - name: Run ESLint
         run: |
           cd ${{ matrix.service }}
-          npm eslint .
+          npx eslint .
