--- a/product-service/package.json
+++ b/product-service/package.json
@@ -18,6 +18,7 @@
     "mysql2": "^3.9.7"
   },
   "devDependencies": {
+    "eslint": "^9.30.0",
     "jest": "^30.0.3",
     "nodemon": "^3.1.0",
     "supertest": "^7.1.1"
