--- a/.github/workflows/ushasree-ci.yaml
+++ b/.github/workflows/ushasree-ci.yaml
@@ -38,3 +38,8 @@ jobs:
         run: |
           cd ${{ matrix.service }}
           npx eslint server.js start.js tests/ || true
+    
+      - name: Run Unit Tests
+        run: |
+          cd ${{ matrix.service }}
+          npm test
