--- a/api-gateway/sonar-project.properties
+++ b/api-gateway/sonar-project.properties
@@ -1,8 +1,8 @@
 sonar.projectKey=api-gateway
 sonar.projectName=api-gateway
-sonar.host.url=http://a7380bc965b9b44c893ac5108e8dd37c-542654099.ap-south-1.elb.amazonaws.com:9000
+#sonar.host.url=http://a7380bc965b9b44c893ac5108e8dd37c-542654099.ap-south-1.elb.amazonaws.com:9000
 # Do NOT commit your token; pass via env/CLI instead!
-sonar.token=squ_9992387890f254d7c074f7ad65ece753f57a6698
+#sonar.token=squ_9992387890f254d7c074f7ad65ece753f57a6698
 
 # Source code and test directories
 sonar.sources=.
