--- a/notification-service/sonar-project.properties
+++ b/notification-service/sonar-project.properties
@@ -1,8 +1,8 @@
 # sonar-project.properties for Notification Service
 sonar.projectKey=notification-service
 sonar.projectName=notification-service
-sonar.host.url=http://a7380bc965b9b44c893ac5108e8dd37c-542654099.ap-south-1.elb.amazonaws.com:9000
-sonar.token=squ_9992387890f254d7c074f7ad65ece753f57a6698
+#sonar.host.url=http://a7380bc965b9b44c893ac5108e8dd37c-542654099.ap-south-1.elb.amazonaws.com:9000
+#sonar.token=squ_9992387890f254d7c074f7ad65ece753f57a6698
 sonar.sources=.
 sonar.exclusions=**/node_modules/**,**/tests/**,**/coverage/**,**/coverage/lcov-report/**,**/*.test.js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
