--- a/.github/workflows/ushasree-ci.yaml
+++ b/.github/workflows/ushasree-ci.yaml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-lint:
+  uss-backend-ci:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -51,6 +51,7 @@ jobs:
         run: |
           cd ${{ matrix.service }}
           npm test
+          
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -61,6 +62,15 @@ jobs:
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:${{ github.sha }} ${{ matrix.service }}
 
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:${{ github.sha }}
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+
       - name: Push Docker image
         run: |
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:${{ github.sha }}
+
