--- a/.github/workflows/ushasree-ci.yaml
+++ b/.github/workflows/ushasree-ci.yaml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 jobs:
-  uss-backend-ci:
+  build-and-lint:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -51,7 +51,6 @@ jobs:
         run: |
           cd ${{ matrix.service }}
           npm test
-          
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
