USS CI PIPELINE

--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -4,6 +4,7 @@
   "description": "Notification microservice for UshaSree Industries",
   "main": "server.js",
   "scripts": {
+    "release": "standard-version",
     "start": "node server.js",
     "lint": "eslint .",
     "test": "jest"
@@ -20,6 +21,7 @@
   "devDependencies": {
     "eslint": "^9.30.0",
     "jest": "^30.0.2",
+    "standard-version": "^9.5.0",
     "supertest": "^7.1.1"
   }
 }
