--- a/.github/workflows/ushasree-ci.yaml
+++ b/.github/workflows/ushasree-ci.yaml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-lint:
+  uss-backend-ci:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     strategy:
@@ -53,25 +53,31 @@ jobs:
         run: |
           cd ${{ matrix.service }}
           npm test
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Set version from git commit count
+        id: version
+        run: |
+          version=$(git rev-list --count HEAD)
+          echo "VERSION=$version" >> $GITHUB_OUTPUT
+
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:${{ github.sha }} ${{ matrix.service }}
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:v${{ steps.version.outputs.VERSION }} ${{ matrix.service }}
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:${{ github.sha }}
+          image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:v${{ steps.version.outputs.VERSION }}
           format: 'table'
-          exit-code: '0'       # Set to '1' to fail the job on vulnerabilities
+          exit-code: '0'
           ignore-unfixed: true
 
       - name: Push Docker image
         run: |
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:${{ github.sha }}
-
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:v${{ steps.version.outputs.VERSION }}
