--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -4,6 +4,7 @@
   "description": "API Gateway for UshaSree Industries microservices",
   "main": "server.js",
   "scripts": {
+    "release": "standard-version",
     "start": "node server.js",
     "lint": "eslint .",
     "test": "jest",
@@ -21,6 +22,7 @@
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.2.0",
     "jest": "^30.0.2",
+    "standard-version": "^9.5.0",
     "supertest": "^7.1.1"
   }
 }
