--- a/product-service/package.json
+++ b/product-service/package.json
@@ -4,6 +4,7 @@
   "description": "Product microservice for UshaSree Industries",
   "main": "server.js",
   "scripts": {
+    "release": "standard-version",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "lint": "eslint .",
@@ -21,6 +22,7 @@
     "eslint": "^9.30.0",
     "jest": "^30.0.3",
     "nodemon": "^3.1.0",
+    "standard-version": "^9.5.0",
     "supertest": "^7.1.1"
   }
 }
