--- a/ingress/nginx/cert-manager-app.yaml
+++ b/ingress/nginx/cert-manager-app.yaml
@@ -15,6 +15,6 @@ spec:
           value: "true"
   destination:
     server: https://kubernetes.default.svc
-    namespace: cert-manager
+    namespace: default
   syncPolicy:
     automated: {}
