--- a/.github/workflows/ushasree-ci.yaml
+++ b/.github/workflows/ushasree-ci.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
 
-permissions: write-all   # <--- Needed to push changes back to the repo
+permissions: write-all   # Needed for pushing changes back to the repo
 
 jobs:
   uss-backend-ci:
@@ -84,12 +84,13 @@ jobs:
         run: |
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:v${{ steps.version.outputs.VERSION }}
 
-      # --- NEW: Update Deployment YAML with new image tag ---
+      # --- NEW: Install yq for YAML editing ---
       - name: Install yq
         run: |
           sudo wget https://github.com/mikefarah/yq/releases/download/v4.44.1/yq_linux_amd64 -O /usr/local/bin/yq
           sudo chmod +x /usr/local/bin/yq
 
+      # --- NEW: Update deployment.yaml with new image tag ---
       - name: Update deployment.yaml with new image tag
         run: |
           yq -i '
@@ -97,12 +98,14 @@ jobs:
               select(.name == "${{ matrix.service }}") .image = "${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:v${{ steps.version.outputs.VERSION }}"
             ' ${{ matrix.service }}/k8s/deployment.yaml
 
+      # --- NEW: Commit, rebase and push the manifest update safely ---
       - name: Commit and push updated deployment.yaml
         run: |
           git config --global user.email "nvvr53@gmail.com"
           git config --global user.name "nvvrsre"
           git add ${{ matrix.service }}/k8s/deployment.yaml
           git commit -m "ci: update image for ${{ matrix.service }} to v${{ steps.version.outputs.VERSION }}" || echo "No changes to commit"
+          git pull --rebase origin main
           git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
