--- a/.github/workflows/ushasree-ci.yaml
+++ b/.github/workflows/ushasree-ci.yaml
@@ -11,7 +11,7 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 2
+      max-parallel: 1     # You can lower this if you still see many push errors
       matrix:
         service:
           - api-gateway
@@ -84,13 +84,13 @@ jobs:
         run: |
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:v${{ steps.version.outputs.VERSION }}
 
-      # --- NEW: Install yq for YAML editing ---
+      # --- Install yq for YAML editing ---
       - name: Install yq
         run: |
           sudo wget https://github.com/mikefarah/yq/releases/download/v4.44.1/yq_linux_amd64 -O /usr/local/bin/yq
           sudo chmod +x /usr/local/bin/yq
 
-      # --- NEW: Update deployment.yaml with new image tag ---
+      # --- Update deployment.yaml with new image tag ---
       - name: Update deployment.yaml with new image tag
         run: |
           yq -i '
@@ -98,14 +98,23 @@ jobs:
               select(.name == "${{ matrix.service }}") .image = "${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:v${{ steps.version.outputs.VERSION }}"
             ' ${{ matrix.service }}/k8s/deployment.yaml
 
-      # --- NEW: Commit, rebase and push the manifest update safely ---
-      - name: Commit and push updated deployment.yaml
+      # --- Commit, rebase, and push the manifest update safely ---
+      - name: Commit, rebase, and push updated deployment.yaml
         run: |
           git config --global user.email "nvvr53@gmail.com"
           git config --global user.name "nvvrsre"
           git add ${{ matrix.service }}/k8s/deployment.yaml
           git commit -m "ci: update image for ${{ matrix.service }} to v${{ steps.version.outputs.VERSION }}" || echo "No changes to commit"
-          git pull --rebase origin main
-          git push origin main
+
+          # Pull with rebase and push, retry up to 3 times on failure (handle race)
+          n=0
+          until [ $n -ge 3 ]
+          do
+            git pull --rebase origin main && git push origin main && break
+            n=$((n+1))
+            echo "Push failed, retrying ($n/3)..."
+            sleep 2
+          done
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+
