--- a/payment-service/k8s/deployment.yaml
+++ b/payment-service/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: payment-service
-        image: nvvrsre/usindus-payment-service
+        image: nvvrsre/payment-service
         ports:
         - containerPort: 3005
         env:
