ci: update image for notification-service to v1

--- a/notification-service/k8s/deployment.yaml
+++ b/notification-service/k8s/deployment.yaml
@@ -13,17 +13,17 @@ spec:
         app: notification-service
     spec:
       containers:
-      - name: notification-service
-        image: nvvrsre/notification-service
-        ports:
-        - containerPort: 3006
-        env:
-        - name: PORT
-          value: "3006"
-        resources:
-          requests:
-            memory: "128Mi"
-            cpu: "100m"
-          limits:
-            memory: "256Mi"
-            cpu: "500m"
+        - name: notification-service
+          image: nvvrsre/notification-service:v1
+          ports:
+            - containerPort: 3006
+          env:
+            - name: PORT
+              value: "3006"
+          resources:
+            requests:
+              memory: "128Mi"
+              cpu: "100m"
+            limits:
+              memory: "256Mi"
+              cpu: "500m"
