--- a/ingress/nginx/cluster-issuer.yaml
+++ b/ingress/nginx/cluster-issuer.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email: nushasree25@gmail.com         # Use your real email here
+    email: nushasree25@gmail.com   # Use your email!
     privateKeySecretRef:
       name: letsencrypt-prod
     solvers:
