--- a/ingress/nginx/cert-manager-app.yaml
+++ b/ingress/nginx/cert-manager-app.yaml
@@ -2,19 +2,19 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: cert-manager
-  namespace: argocd
+  namespace: default        # <-- Your ArgoCD's namespace!
 spec:
   project: default
   source:
     repoURL: https://charts.jetstack.io
     chart: cert-manager
-    targetRevision: v1.14.5      # Latest stable (update as needed)
+    targetRevision: v1.14.5
     helm:
       parameters:
         - name: installCRDs
           value: "true"
   destination:
     server: https://kubernetes.default.svc
-    namespace: default
+    namespace: cert-manager    # <-- Where cert-manager will be installed
   syncPolicy:
     automated: {}
