--- a/ingress/nginx/ushasree-ingress.yaml
+++ b/ingress/nginx/ushasree-ingress.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: default
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 spec:
   ingressClassName: nginx
   tls:
