--- a/.github/workflows/ussbackend-cicd.yaml
+++ b/.github/workflows/ussbackend-cicd.yaml
@@ -96,6 +96,12 @@ jobs:
               select(.name == "${{ matrix.service }}") .image = "${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.service }}:v${{ steps.version.outputs.VERSION }}"
             ' ${{ matrix.service }}/k8s/deployment.yaml
 
+      - name: Force ArgoCD Sync with dummy annotation
+        run: |
+          yq -i '
+            .spec.template.metadata.annotations["argocd-sync-force"] = strenv(GITHUB_RUN_ID)
+          ' ${{ matrix.service }}/k8s/deployment.yaml
+
       - name: Show image after update
         run: grep image ${{ matrix.service }}/k8s/deployment.yaml
 
@@ -104,7 +110,7 @@ jobs:
           git config --global user.email "nvvr53@gmail.com"
           git config --global user.name "nvvrsre"
           git add ${{ matrix.service }}/k8s/deployment.yaml
-          git commit -m "ci: update image for ${{ matrix.service }} to v${{ steps.version.outputs.VERSION }}" || echo "No changes to commit"
+          git commit -m "ci: update image and force sync for ${{ matrix.service }} to v${{ steps.version.outputs.VERSION }}" || echo "No changes to commit"
           # Auto-add and commit any new changes before rebase (handles npm or yq side effects)
           git add -u
           git commit -m "ci: auto-stage any changes before rebase" || echo "No changes to commit"
