ci: update image and force sync for api-gateway to v1

--- a/api-gateway/k8s/deployment.yaml
+++ b/api-gateway/k8s/deployment.yaml
@@ -11,6 +11,8 @@ spec:
     metadata:
       labels:
         app: api-gateway
+      annotations:
+        argocd-sync-force: "16042346762"
     spec:
       containers:
         - name: api-gateway
