--- a/cart-service/k8s/deployment.yaml
+++ b/cart-service/k8s/deployment.yaml
@@ -11,6 +11,8 @@ spec:
     metadata:
       labels:
         app: cart-service
+      annotations:
+        argocd-sync-force: "16042346762"
     spec:
       containers:
         - name: cart-service
