ci: update image and force sync for catalog-service to v1

--- a/catalog-service/k8s/deployment.yaml
+++ b/catalog-service/k8s/deployment.yaml
@@ -11,6 +11,8 @@ spec:
     metadata:
       labels:
         app: catalog-service
+      annotations:
+        argocd-sync-force: "16042346762"
     spec:
       containers:
         - name: catalog-service
