--- a/notification-service/k8s/deployment.yaml
+++ b/notification-service/k8s/deployment.yaml
@@ -11,6 +11,8 @@ spec:
     metadata:
       labels:
         app: notification-service
+      annotations:
+        argocd-sync-force: "16042346762"
     spec:
       containers:
         - name: notification-service
