--- a/order-service/k8s/deployment.yaml
+++ b/order-service/k8s/deployment.yaml
@@ -11,6 +11,8 @@ spec:
     metadata:
       labels:
         app: order-service
+      annotations:
+        argocd-sync-force: "16042346762"
     spec:
       containers:
         - name: order-service
