--- a/payment-service/k8s/deployment.yaml
+++ b/payment-service/k8s/deployment.yaml
@@ -11,6 +11,8 @@ spec:
     metadata:
       labels:
         app: payment-service
+      annotations:
+        argocd-sync-force: "16042346762"
     spec:
       containers:
         - name: payment-service
