ci: update image and force sync for product-service to v1

--- a/product-service/k8s/deployment.yaml
+++ b/product-service/k8s/deployment.yaml
@@ -11,6 +11,8 @@ spec:
     metadata:
       labels:
         app: product-service
+      annotations:
+        argocd-sync-force: "16042346762"
     spec:
       containers:
         - name: product-service
