--- a/promo-service/k8s/deployment.yaml
+++ b/promo-service/k8s/deployment.yaml
@@ -11,6 +11,8 @@ spec:
     metadata:
       labels:
         app: promo-service
+      annotations:
+        argocd-sync-force: "16042346762"
     spec:
       containers:
         - name: promo-service
