--- a/api-gateway/k8s/deployment.yaml
+++ b/api-gateway/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: api-gateway
-          image: nvvrsre/api-gateway:v1
+          image: nvvrsre/api-gateway
           ports:
             - containerPort: 3000
           env:
