--- a/catalog-service/k8s/deployment.yaml
+++ b/catalog-service/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: catalog-service
-          image: nvvrsre/catalog-service:v1
+          image: nvvrsre/catalog-service
           ports:
             - containerPort: 3008
           env:
