--- a/order-service/k8s/deployment.yaml
+++ b/order-service/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: order-service
-          image: nvvrsre/order-service:v1
+          image: nvvrsre/order-service
           ports:
             - containerPort: 3004
           env:
