--- a/auth-service/k8s/deployment.yaml
+++ b/auth-service/k8s/deployment.yaml
@@ -12,11 +12,11 @@ spec:
       labels:
         app: auth-service
       annotations:
-        argocd-sync-force: "16042346762"
+        argocd-sync-force: "16066797212"
     spec:
       containers:
         - name: auth-service
-          image: nvvrsre/auth-service
+          image: nvvrsre/auth-service:v1
           ports:
             - containerPort: 3001
           env:
