--- a/catalog-service/k8s/deployment.yaml
+++ b/catalog-service/k8s/deployment.yaml
@@ -12,11 +12,11 @@ spec:
       labels:
         app: catalog-service
       annotations:
-        argocd-sync-force: "16042346762"
+        argocd-sync-force: "16066797212"
     spec:
       containers:
         - name: catalog-service
-          image: nvvrsre/catalog-service
+          image: nvvrsre/catalog-service:v1
           ports:
             - containerPort: 3008
           env:
