--- a/product-service/k8s/deployment.yaml
+++ b/product-service/k8s/deployment.yaml
@@ -12,11 +12,11 @@ spec:
       labels:
         app: product-service
       annotations:
-        argocd-sync-force: "16042346762"
+        argocd-sync-force: "16066797212"
     spec:
       containers:
         - name: product-service
-          image: nvvrsre/product-service
+          image: nvvrsre/product-service:v1
           ports:
             - containerPort: 3002
           env:
