--- a/promo-service/k8s/deployment.yaml
+++ b/promo-service/k8s/deployment.yaml
@@ -12,11 +12,11 @@ spec:
       labels:
         app: promo-service
       annotations:
-        argocd-sync-force: "16042346762"
+        argocd-sync-force: "16066797212"
     spec:
       containers:
         - name: promo-service
-          image: nvvrsre/promo-service
+          image: nvvrsre/promo-service:v1
           ports:
             - containerPort: 3007
           env:
