--- a/shared-resources/k8s/db-secret.yaml
+++ b/shared-resources/k8s/db-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: db-secret
 type: Opaque
 data:
-  DB_USER: bnZ2cg==                   # Username(echo -n nvvr | base64) (base64 encoded)
-  DB_PASSWORD: bnZ2cnVzczEyMw==       # nvvruss123 (base64 encoded)
+  DB_USER: dXNoYXNyZWVzdG9yZXM=                          # Username(echo -n ushasreestores | base64) (base64 encoded)
+  DB_PASSWORD: dXNoYXNyZWVzdG9yZXMxMjM=       # ushasreestores123 (base64 encoded)
