--- a/shared-resources/helm/templates/db-secrets.yaml
+++ b/shared-resources/helm/templates/db-secrets.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: db-secret
+  namespace: {{ .Release.Namespace }}
 type: Opaque
 stringData:
   DB_USER: {{ .Values.dbSecret.user | quote }}
