--- a/shared-resources/k8s/db-configmap.yaml
+++ b/shared-resources/k8s/db-configmap.yaml
@@ -3,6 +3,6 @@ kind: ConfigMap
 metadata:
   name: db-config
 data:
-  DB_HOST: ushasreestoresdb.c500a6yo2g1r.ap-south-1.rds.amazonaws.com
+  DB_HOST: ushasreestoresdb.cbmg88gguch9.ap-south-1.rds.amazonaws.com
   DB_NAME: ushasreestoresdb
   DB_PORT: "3306"
